updated container styles, by Julia

--- a/css/index.html
+++ b/css/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
     <!--&lt;!&ndash; Latest compiled and minified CSS &ndash;&gt;-->
 
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">-->
     <!--&lt;!&ndash;&lt;!&ndash;&lt;!&ndash; Optional theme &ndash;&gt;&ndash;&gt;&ndash;&gt;-->
     <!--<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">-->
 
@@ -19,13 +19,9 @@
 <!--<div class="container">-->
 
     <!--<div class="row">-->
-        <!--&lt;!&ndash;1.1&ndash;&gt;-->
         <!--<div class="wall"></div>-->
-        <!--&lt;!&ndash;2&ndash;&gt;-->
         <!--<div class="wall"></div>-->
-        <!--&lt;!&ndash;3&ndash;&gt;-->
         <!--<div class="wall"></div>-->
-        <!--&lt;!&ndash;4&ndash;&gt;-->
         <!--<div class="wall"></div>-->
         <!--&lt;!&ndash;5&ndash;&gt;-->
         <!--<div class="wall"></div>-->
